--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1479,6 +1479,11 @@ video {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+* {
+  border:1px solid green;
 }
 
 body {
